# bungus

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: database.sql
src/: error.rs  main.rs
src/commands/: about.rs  markov.rs  mod.rs  ping.rs
src/markov/: database.rs  mod.rs  model.rs  scanner.rs  token.rs
