[package]
name = "bungus"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
log = "0.4.27"
poise = "0.6.1"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
